<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="br.com.vamosracharapp.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/info_icone"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/real"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/valorADividirEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/marcador_valor"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1" />

    <TextView
        android:id="@+id/qtdePessoasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/marcador_pessoas"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="@+id/valorADividirEditText"
        app:layout_constraintStart_toStartOf="@+id/valorADividirEditText"
        app:layout_constraintTop_toBottomOf="@+id/valorADividirEditText" />

    <ImageButton
        android:id="@+id/menosPessoasButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/mais"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/qtdePessoasTextView"
        app:layout_constraintStart_toStartOf="@+id/valorADividirEditText"
        app:layout_constraintTop_toTopOf="@+id/qtdePessoasTextView"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/maisPessoasButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/menos"
        android:tint="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/qtdePessoasTextView"
        app:layout_constraintEnd_toEndOf="@+id/valorADividirEditText"
        app:layout_constraintTop_toTopOf="@+id/qtdePessoasTextView"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageView
        android:id="@+id/pessoasImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descricao_pessoas"
        app:layout_constraintBottom_toBottomOf="@+id/qtdePessoasTextView"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/qtdePessoasTextView"
        app:srcCompat="@drawable/ic_pessoas_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/valorParaCadaTextView"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/valorParaCadaTextView" />

    <TextView
        android:id="@+id/valorParaCadaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/parcela"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="@+id/maisPessoasButton"
        app:layout_constraintStart_toStartOf="@+id/menosPessoasButton"
        app:layout_constraintTop_toBottomOf="@+id/qtdePessoasTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compartilharValorFButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:tint="#FFFFFF"
        app:fabCustomSize="70dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="@+id/lerValorFButton"
        app:layout_constraintEnd_toStartOf="@+id/lerValorFButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lerValorFButton"
        app:maxImageSize="70dp"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lerValorFButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/compartilharValorFButton"
        app:maxImageSize="70dp"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

</androidx.constraintlayout.widget.ConstraintLayout>